Vector tests and basic initializer

--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
     <canvas id="snake" width="800" height="600"></canvas>
 
 </body>
-    <script src="js/canvasTest.js"></script>
+    <script src="js/src/snakeGame.js"></script>
 </html>
