--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div><span>"snake game" 2</span></div>
     <canvas id="snake" width="800" height="600"></canvas>
 
 </body>
